alexis-giromagny/archives/ticketin/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ticketin
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
