alexis-giromagny/archives/ticketin/k8s/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: ticketin
spec:
  parentRefs:
    - name: tp-gateway
  hostnames:
    - "app.ticket-in.fr"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
